<?xml version="1.0" encoding="utf-8"?>
<!-- 四大组件中使用到的string -->
<resources>

    <string name="app_name">AppTest</string>
    <string name="action_settings">Settings</string>
	
	<!-- 在sharedpreferences中使用 -->
	<string name="sharedpreferences">sharedpreferences demo</string>
	<string name="button">Change value</string>
	<string name="hello_world">Hello world!</string>
	
	<!-- 在service中使用 -->
	<string name="service">Service demo</string>
	<string name="bind">绑定服务</string>
	<string name="getvalue">获取Service进程号</string>
	<string name="unbind">解除服务</string>
	
	<!-- 在Intent中使用 -->
	<string name="intent">Intent demo</string>
	<string name="homescreen">打开主屏幕</string>
	<string name="mail">发送Mail</string>
	<string name="address">打开通讯录</string>
	<string name="dail">拨打电话</string>
	
	<!-- 在Content Provider中使用 -->
	<string name="contentproviderdemo">Content Provider demo</string>
	<string name="intentaccess">访问日历数据</string>
	<string name="intentgetbutton">Intent获取日历2012年2月</string>
	<string name="contentR_getbutton">ContentResolver获取</string>
	<string name="contentR_setbutton">ContentResolver更新</string>
	<string name="contentprovider">访问自己的Content Provider程序</string>
	<string name="contentprovider_query_button">Query</string>
	<string name="contentprovider_insert_button">Insert</string>
	<string name="contentprovider_update_button">Update</string>
	<string name="contentprovider_delete_button">Delete</string>
	
	<!-- 在BroadCaster中使用 -->
	<string name="boardcastdemo">BoardCast demo</string>
    <string name="boardcastbutton1">获取重启次数</string>
    <string name="boardcastbutton2">发送广播</string>
	
</resources>
