<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Space
        android:layout_width="match_parent"
        android:layout_height="5pt" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intentaccess" />

   <Button
            android:id="@+id/intentgetbutton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/intentgetbutton" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
           <Button
                android:id="@+id/contentR_getbutton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/contentR_getbutton" />

            <Button
                android:id="@+id/contentR_setbutton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/contentR_setbutton" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10pt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contentprovider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/contentprovider_query_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/contentprovider_query_button" />

        <Button
            android:id="@+id/contentprovider_insert_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/contentprovider_insert_button" />

        <Button
            android:id="@+id/contentprovider_update_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/contentprovider_update_button" />

        <Button
            android:id="@+id/contentprovider_delete_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/contentprovider_delete_button" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="right"
                android:text="输入：" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Insert/update/delete title" >

                <requestFocus />
            </EditText>

    </LinearLayout>
</LinearLayout>
